# Dictionary_App_Website

./: Debtanalysis.xlsx  database_schema.sql  import_dictionary_data.py  update_verb_json_structure.py  user_experience_flow.md
DictGenerativeRule/: CLAUDE.md  plan_next.md
DictGenerativeRule/40000Lemma/: add_missing_lemmas.py  filtered_lemma_comparison_results.xlsx  lemma_comparison_results.xlsx  merged_lemmas.xlsx
DictGenerativeRule/Adjective_Generator/: CLAUDE.md  progress_checklist_german.md
DictGenerativeRule/Adverb_Generator/: CLAUDE.md
DictGenerativeRule/Conjunction_Generator/: CLAUDE.md  progress_checklist.md
DictGenerativeRule/Determiner_Generator/: CLAUDE.md  determiner_list.txt  progress_checklist.md
DictGenerativeRule/Pronoun_Generator/: CLAUDE.md  (+3 more)
DictGenerativeRule_2/: generate_jsonl_files.py  generate_progress_checklists.py  lemmas.txt  lemmas_Adjective.txt  lemmas_Noun.txt  lemmas_Verb.txt  merged_lemmas_cleaned.xlsx
Rust_App/: CLAUDE.md  session_summary.md
Rust_App/dictionary-app-v2/src-tauri/: Cargo.toml  tauri.conf.json
Rust_App/dictionary-app-v2/src-tauri/src/: database.rs  logger.rs  main.rs  plugin_manager.rs  search_engine.rs
dictionary-app-site/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
dictionary_app/: .env.example  .gitignore  GITHUB_SETUP.md  README.md  build.py  check_db_format.py  check_inflections.py  import_run_verb.py  quick_test.py  requirements-test.txt  requirements.txt  run_app.py  test_auth.py  test_auth_limit.py  test_full_app.py  test_licensing.py  test_near_limit.py
(+1983 files in other folders)
