[package]
name = "dictionary-app"
version = "0.0.0"
description = "A Dictionary application built with Tauri"
authors = ["you"]
license = ""
repository = ""
default-run = "dictionary-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-global-shortcut = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
env_logger = "0.11"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
